# resorts

./: README.md  docker-compose.yaml
api/: Cargo.toml  Dockerfile  README.md  Rocket.toml  resorts.postman_collection.json
api/src/: main.rs  utils.rs
web/: Dockerfile  README.md  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: index.js
web/src/components/: CustomerRegistrationForm.js
web/src/components/ActionButtons/: ActionButton.js  index.js
web/src/components/CardLayout/: index.js
web/src/components/CustomerRegistrationForm/: index.js
web/src/components/LayoutMenu/: index.js  styles.js
web/src/components/ResortChooser/: index.js
web/src/components/ResortForm/: index.js
web/src/components/ResortsList/: index.js
web/src/components/SideMenu/: index.js
web/src/components/UsersList/: index.js
web/src/services/: api.js
