[package]
name = "resorts-app"
version = "0.1.0"
authors = ["jp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_cors="0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
